--- a/Views/User/Cookiecakes.cshtml
+++ b/Views/User/Cookiecakes.cshtml
@@ -1,4 +1,4 @@
-﻿@model CRACKED.Dtos.UserDto
+﻿@model CRACKED.Dtos.ProductListDto
 
 @using (Html.BeginForm())
 {
@@ -11,26 +11,26 @@
         <div class="container text-center">
             <div class="row align-items-center">
                 <div class="col">
-                    <img src="~/Content/Imagen/image (6).png" width="380" height="360" />
+                    <img src="~/Content/Imagen/@Model.Products[0].Imagen" width="380" height="360" />
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="button" value="Cookienute" class="btn btn-primary"  onclick="window.location='@Url.Action("Detalle_Cookiecakes", "User")'"/>
+                            <input type="button" value="@Model.Products[0].Nombre" class="btn btn-primary" onclick="window.location='@Url.Action("Detalle_Cookiecakes", "User", new { nombre = Model.Products[0].Nombre })'" />
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="~/Content/Imagen/image (7).png" width="380" height="360" />
+                    <img src="~/Content/Imagen/@Model.Products[1].Imagen" width="380" height="360" />
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="button" value="Kinder Cookie" class="btn btn-primary"  onclick="window.location='@Url.Action("Detalle_Cookiecakes", "User")'"/>
+                            <input type="button" value="@Model.Products[1].Nombre" class="btn btn-primary" onclick="window.location='@Url.Action("Detalle_Cookiecakes_Oreo", "User", new { nombre = Model.Products[1].Nombre })'" />
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="~/Content/Imagen/image (8).png" width="380" height="360" />
+                    <img src="~/Content/Imagen/@Model.Products[2].Imagen" width="380" height="360" />
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="button" value="Rainbow" class="btn btn-primary"  onclick="window.location='@Url.Action("Detalle_Cookiecakes", "User")'"/>
+                            <input type="button" value="@Model.Products[2].Nombre" class="btn btn-primary" onclick="window.location='@Url.Action("Detalle_Cookiecakes_Chipcake", "User", new { nombre = Model.Products[2].Nombre })'" />
                         </div>
                     </div>
                 </div>
