--- a/Views/User/Galletas.cshtml
+++ b/Views/User/Galletas.cshtml
@@ -1,49 +1,45 @@
-﻿@model CRACKED.Dtos.UserDto
+﻿@model CRACKED.Dtos.ProductListDto
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h1 style="color: saddlebrown; font-family: cursive; text-align: center;">Nuestras Galletas</h1>
-    <hr />
 
-    <div class="container text-center">
-        <div class="row align-items-center">
-            <div class="col">
-                <img src="~/Content/Imagen/image (4).png" width="380" height="360" />
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="button" value="Cookienute" class="btn btn-primary" onclick="window.location='@Url.Action("Detalle_Galletas", "User")'"/>
+    <div class="form-horizontal">
+        <h1 style="color: saddlebrown; font-family: cursive; text-align: center;">Nuestras Galletas</h1>
+        <hr />
+
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class="col">
+                    <img src="~/Content/Imagen/@Model.Products[0].Imagen" width="380" height="360" />
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="button" value="@Model.Products[0].Nombre" class="btn btn-primary" onclick="window.location='@Url.Action("Detalle_Galletas", "User", new { nombre = Model.Products[0].Nombre })'" />
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <img src="~/Content/Imagen/image (5).png" width="380" height="360" />
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="button" value="Kinder Cookie" class="btn btn-primary" onclick="window.location='@Url.Action("Detalle_Galletas", "User")'"/>
+                <div class="col">
+                    <img src="~/Content/Imagen/@Model.Products[1].Imagen" width="380" height="360" />
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="button" value="@Model.Products[1].Nombre" class="btn btn-primary" onclick="window.location='@Url.Action("Detalle_Galletas_CookieNute", "User", new { nombre = Model.Products[1].Nombre })'" />
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <img src="~/Content/Imagen/image (1).png" width="380" height="360" />
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="button" value="Rainbow" class="btn btn-primary" onclick="window.location='@Url.Action("Detalle_Galletas", "User")'" />
+                <div class="col">
+                    <img src="~/Content/Imagen/@Model.Products[2].Imagen" width="380" height="360" />
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="button" value="@Model.Products[2].Nombre" class="btn btn-primary" onclick="window.location='@Url.Action("Detalle_Galletas_Rainbow", "User", new { nombre = Model.Products[2].Nombre })'" />
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
+
     </div>
-   
-  
-</div>
-
-
-
-
-
 }
 
 <div>
@@ -62,9 +58,11 @@
         cursor: pointer;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
+
         .btn-primary:hover {
             background-color: #542b1d;
         }
+
     .form-group {
         text-align: center;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
