--- a/Views/User/Productos.cshtml
+++ b/Views/User/Productos.cshtml
@@ -1,28 +1,33 @@
-﻿@model CRACKED.Dtos.UserDto
+﻿@model CRACKED.Dtos.TipoProductListDto
+
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h1 style="color: saddlebrown; font-family: cursive; text-align: center;">Nuestros Productos</h1>
-    <hr />
-    <div class="row justify-content-around">
-        <div class="col-4">
-
-            <img src="~/Content/Imagen/image (1).png" width="380" height="360" class="img-fluid" />
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="button" value="Galletas" class="btn btn-primary" onclick="window.location='@Url.Action("Galletas", "User")'" />
+    <div class="form-horizontal">
+        <h1 style="color: saddlebrown; font-family: cursive; text-align: center;">Nuestros Productos</h1>
+        <hr />
+        <div class="row justify-content-around">
+            <!-- Primer Producto -->
+            <div class="col-4">
+                <img src="~/Content/Imagen/@Model.Users[0].Imagen" width="380" height="360" class="img-fluid" />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="button" value="@Model.Users[0].Nombre" class="btn btn-primary"
+                               onclick="window.location.href='@Url.Action("Galletas", "User", new { nombre = Model.Users[0].Nombre })'" />
+                    </div>
                 </div>
             </div>
 
-        </div>
-        <div class="col-4">
-            <img src="~/Content/Imagen/image (2).png" width="380" height="360" class="img-fluid"/>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="button" value="Cookiecakes" class="btn btn-primary" onclick="window.location='@Url.Action("Cookiecakes", "User")'" />
+            <!-- Segundo Producto -->
+            <div class="col-4">
+                <img src="~/Content/Imagen/@Model.Users[1].Imagen" width="380" height="360" class="img-fluid" />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="button" value="@Model.Users[1].Nombre" class="btn btn-primary"
+                               onclick="window.location.href='@Url.Action("Cookiecakes", "User", new { nombre = Model.Users[1].Nombre })'" />
+                    </div>
                 </div>
             </div>
         </div>
@@ -31,8 +36,6 @@
 
 
 
-</div>
-        
 }
 
 <div>
@@ -46,7 +49,7 @@
     togglePassword.addEventListener('click', function () {
         const type = passwordInput.type === 'password' ? 'text' : 'password';
         passwordInput.type = type;
-        togglePassword.innerHTML = type === 'password' ? '<i class="bi bi-eye-slash-fill" style="color:saddlebrown;"></i>' : '<i class="bi bi-eye-fill"  style="color:saddlebrown;"></i>' ;
+        togglePassword.innerHTML = type === 'password' ? '<i class="bi bi-eye-slash-fill" style="color:saddlebrown;"></i>' : '<i class="bi bi-eye-fill"  style="color:saddlebrown;"></i>';
     });
 
     // Script para toggle de visibilidad de la confirmación de contraseña
@@ -71,12 +74,13 @@
         cursor: pointer;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
-    
+
         .btn-primary:hover {
             background-color: #542b1d;
         }
+
     .form-group {
-        text-align:center;
+        text-align: center;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
 </style>
